--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -9,6 +9,8 @@ $spacer: 0.5rem;
 $border-radius: 0.15rem;
 $border-radius-lg: .2rem;
 $border-radius-sm: .15rem;
+// $dropdown-etc
+
 
 // import bootstrap
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
