--- a/frontend/src/styles/components/landing.scss
+++ b/frontend/src/styles/components/landing.scss
@@ -1,7 +1,8 @@
 .landing {
   background-image: url('../../images/ffflux.svg');
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: center;
-  height: 235vw; // Not a good idea at very wide or very small screens
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
 }
