--- a/frontend/src/styles/components/landingheader.scss
+++ b/frontend/src/styles/components/landingheader.scss
@@ -1,19 +1,19 @@
 .landing-header {
   height: 90px;
-
-  .navbar-brand {
-    img {
-      width: 200px;
-    }
-  }
+  padding: 0 1rem;
 }
 
-.dropdown-toggle::after {
-  content: none;
+.logo {
+  width: 200px;
+}
+
+.dropstart .dropdown-toggle::before {
+  display: none; // This removes the small arrow on the dropdown button
 }
 
 @media only screen and (max-width: $sm) {
-  .row {
+
+  .landing-header-links {
     display: none;
   }
 }
@@ -23,4 +23,7 @@
     height: 180px;
   }
 
+  .dropdown-toggle {
+    display: none;
+  }
 }
