--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,22 +1,30 @@
 // custom variables
 $teal: #0F756B;
 $primary: $teal;
-$secondary: #77B8B2;
+$grey: #D8ECEA;
+$secondary: #4eaca2;
 $yellow: #E9B824;
 $orange: #EE9322;
 $red: #D83F31;
 $spacer: 0.5rem;
-$border-radius: 0.15rem;
+$border-radius: 0.2rem;
 $border-radius-lg: .2rem;
 $border-radius-sm: .15rem;
 // $dropdown-etc
 
+// Rules for styling:
+// Alignment: jsx/react code
+// Padding/Margins: SASS
 
 // import bootstrap
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
 
-@import './variables.scss', './components/landing.scss', './components/landingheader.scss';
+@import './variables.scss',
+'./components/landing.scss',
+'./components/landingheader.scss',
+'./components/landingfooter.scss';
 
 * {
+  font-family: 'Outfit', sans-serif;
   box-sizing: border-box;
 }
