Added routes for main games page and 404

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -22,7 +22,9 @@ $border-radius-sm: .15rem;
 @import './variables.scss',
 './components/landing.scss',
 './components/landingheader.scss',
-'./components/landingfooter.scss';
+'./components/landingfooter.scss',
+'./components/landingmodal.scss',
+'./components/gamesdisplay.scss';
 
 * {
   font-family: 'Outfit', sans-serif;
