Unauthenticated games route to allow easier development

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -24,7 +24,8 @@ $border-radius-sm: .15rem;
 './components/landingheader.scss',
 './components/landingfooter.scss',
 './components/landingmodal.scss',
-'./components/gamesdisplay.scss';
+'./components/gamesdisplay.scss',
+'./components/notfound.scss';
 
 * {
   font-family: 'Outfit', sans-serif;
