--- a/frontend/src/styles/components/gamesdisplay.scss
+++ b/frontend/src/styles/components/gamesdisplay.scss
@@ -8,26 +8,24 @@
 
   .display {
     background-color: $teal;
-    border-radius: 1rem;
+    border-radius: $games-border-radius;
     height: 100%;
     max-width: 1440px;
     padding: 0;
   }
 
-  .row {
+  .background-row {
     flex-direction: column-reverse;
     margin: 0;
+    padding: $edge-padding;
   }
 
-  .col {
-    background-color: white;
-  }
 }
 
 .left-col {
   display: none;
-  padding: 10px;
   position: relative;
+  padding-left: 0;
 
   .logo {
     width: 75%;
@@ -41,28 +39,28 @@
     background-color: $secondary;
     display: flex;
     flex-direction: row;
-    border-radius: 8px;
+    border-radius: $games-border-radius;
     width: 100%;
-    padding: 3px;
+    padding: $inside-edge-padding;
 
     img {
-      width: 70px !important;
-      height: 70px;
-      border-radius: 8px;
+      width: 60px !important;
+      height: 60px;
+      border-radius: $games-border-radius;
     }
 
     div {
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
-      padding-left: 3px;
+      padding-left: $inside-edge-padding;
 
       h3 {
         font-size: 0.9rem;
       }
 
       h4 {
-        font-size: 1.25rem;
+        font-size: 0.8rem;
       }
     }
   }
@@ -77,7 +75,7 @@
     justify-content: center;
 
     i {
-      padding: 10px;
+      padding: $edge-padding;
       color: $secondary;
     }
   }
@@ -85,22 +83,22 @@
 
 .center-col {
   background-color: $warning;
+  border-radius: $games-border-radius;
+  padding: 0;
 }
 
+.right-col {
+  padding-right: 0;
+}
 
 @media only screen and (min-width: $sm) {
-  .display-background {
-
-    .col {
-      background-color: white;
-    }
-  }
+  .display-background {}
 }
 
 @media only screen and (min-width: $md) {
   .display-background {
 
-    .row {
+    .background-row {
       flex-direction: row;
       height: 100%;
     }
@@ -115,7 +113,7 @@
 @media only screen and (min-width: $lg) {
   .display-background {
 
-    .row {
+    .background-row {
       flex-direction: row;
       height: 100%;
     }
