--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -32,7 +32,10 @@ $games-border-radius: 8px;
 './components/notfound.scss',
 './components/carousel.scss',
 './components/categorycards.scss',
-'./components/gamecards.scss';
+'./components/gamecards.scss',
+'./components/profile.scss',
+'./components/feature.scss',
+'./components/chat.scss';
 
 * {
   font-family: 'Outfit', sans-serif;
