--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -35,7 +35,8 @@ $games-border-radius: 8px;
 './components/gamecards.scss',
 './components/profile.scss',
 './components/feature.scss',
-'./components/chat.scss';
+'./components/chat.scss',
+'./components/chatmessage.scss';
 
 * {
   font-family: 'Outfit', sans-serif;
