Added debounce to window resizing and styled height of center col

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -49,5 +49,16 @@ body,
   margin: 0;
   padding: 0;
   border: 0;
-  height: 100%;
+}
+
+@media only screen and (min-width: $md) {
+
+  html,
+  body,
+  #root {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    height: 100%;
+  }
 }
