Added logic to switch between chat and following components

--- a/frontend/src/styles/components/landing.scss
+++ b/frontend/src/styles/components/landing.scss
@@ -5,3 +5,13 @@
   background-size: cover;
   height: 100vh;
 }
+
+.landing-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%
+}
+
+.landing-info {
+  flex-grow: 1;
+}
