--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -36,7 +36,8 @@ $games-border-radius: 8px;
 './components/profile.scss',
 './components/feature.scss',
 './components/chat.scss',
-'./components/chatmessage.scss';
+'./components/chatmessage.scss',
+'./components/followinglist.scss';
 
 * {
   font-family: 'Outfit', sans-serif;
