Added user collection button to toggle between all games and user collection

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -37,7 +37,8 @@ $games-border-radius: 8px;
 './components/feature.scss',
 './components/chat.scss',
 './components/chatmessage.scss',
-'./components/followinglist.scss';
+'./components/followinglist.scss',
+'./components/usercollection.scss';
 
 * {
   font-family: 'Outfit', sans-serif;
