--- a/frontend/src/styles/components/chat.scss
+++ b/frontend/src/styles/components/chat.scss
@@ -34,9 +34,11 @@
     .chat {
       width: 100%;
       padding: $edge-padding;
-      flex: 1;
       display: flex;
       flex-direction: column-reverse;
+      height: 507px;
+      overflow-x: hidden;
+      overflow-y: scroll;
     }
   }
 }
