--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -38,7 +38,8 @@ $games-border-radius: 8px;
 './components/chat.scss',
 './components/chatmessage.scss',
 './components/followinglist.scss',
-'./components/usercollection.scss';
+'./components/usercollection.scss',
+'./components/chatmobile.scss';
 
 * {
   font-family: 'Outfit', sans-serif;
