added icons and background files, styled following list

--- a/frontend/src/styles/components/gamecards.scss
+++ b/frontend/src/styles/components/gamecards.scss
@@ -2,6 +2,10 @@
   padding-top: $edge-padding;
 }
 
+.search-input {
+  margin-bottom: $edge-padding;
+}
+
 .pagination {
   padding-top: $edge-padding;
   justify-content: center;
