--- a/frontend/src/styles/components/chat.scss
+++ b/frontend/src/styles/components/chat.scss
@@ -12,6 +12,7 @@
   flex-direction: column;
   align-items: center;
   flex: 1;
+  padding-top: $edge-padding;
 }
 
 .chat-following-switch {
@@ -40,6 +41,20 @@
   height: calc((var(--vh, 1vh) * 100) - (8px + 8px + 51px + 42px + 156px))
 }
 
+.chat-form {
+  padding: $edge-padding;
+
+  form {
+    position: relative;
+
+    button {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+    }
+  }
+}
+
 
 @media only screen and (min-width: $md) {
 
@@ -59,11 +74,16 @@
     background-color: $secondary;
     border-radius: $games-border-radius;
     flex: 1;
+    margin-top: $edge-padding;
   }
 
-  .chat,
+  .chat {
+    height: 615px;
+  }
+
   .following-display {
-    height: 507px;
+    height: 764px;
+    flex-direction: column;
   }
 
 }
