--- a/frontend/src/styles/components/landing.scss
+++ b/frontend/src/styles/components/landing.scss
@@ -3,15 +3,82 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 100vh;
 }
 
 .landing-container {
   display: flex;
   flex-direction: column;
-  height: 100%
 }
 
 .landing-info {
   flex-grow: 1;
+  text-align: center;
+
+  h1 {
+    color: white;
+    font-size: 4rem;
+  }
+}
+
+.landing-decoration {
+  background-image: url('../../images/Landing-decoration.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.landing-info-box {
+  background-color: rgba(#D8ECEA, 0.25);
+  display: flex;
+  flex-direction: row;
+  border-radius: 8px;
+}
+
+.info-box-1,
+.info-box-2,
+.info-box-3 {
+  padding: $edge-padding;
+  border-radius: 8px;
+}
+
+.info-box-1 {
+  background-color: $teal;
+}
+
+.info-box-collection,
+.info-box-trophy,
+.info-box-chat {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 200px;
+}
+
+.info-box-collection {
+  background-image: url('../../images/new-folder-dynamic-color.png');
+}
+
+.info-box-2 {
+  background-color: $warning;
+}
+
+.info-box-chat {
+  background-image: url('../../images/chat-bubble-dynamic-color.png');
+}
+
+.info-box-3 {
+  background-color: $danger;
+}
+
+.info-box-trophy {
+  background-image: url('../../images/trophy-dynamic-color.png');
+}
+
+
+@media only screen and (min-width: $sm) {
+  .landing-info {
+    h1 {
+      font-size: 5rem;
+    }
+  }
 }
