--- a/frontend/src/styles/components/profile.scss
+++ b/frontend/src/styles/components/profile.scss
@@ -1,6 +1,7 @@
 .profile {
   background-color: $secondary;
   border-radius: $games-border-radius;
+  margin-bottom: 10px;
 
   img {
     width: 60px;
@@ -12,5 +13,14 @@
     margin: 0;
     background-color: $danger;
     border-radius: 0 0 8px 8px;
+
+    .col {
+      padding: 0;
+    }
+
+    .btn {
+      width: 100%;
+      border-radius: 0 0 8px 8px;
+    }
   }
 }
