--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -39,7 +39,8 @@ $games-border-radius: 8px;
 './components/chatmessage.scss',
 './components/followinglist.scss',
 './components/usercollection.scss',
-'./components/chatmobile.scss';
+'./components/chatmobile.scss',
+'./components/gamemodal.scss';
 
 * {
   font-family: 'Outfit', sans-serif;
