--- a/frontend/src/styles/components/landing.scss
+++ b/frontend/src/styles/components/landing.scss
@@ -1,8 +1,11 @@
 .landing {
   background-image: url('../../images/ffflux.svg');
+  background-attachment: fixed; // This is essential for the parallax effect
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  min-height: 100%;
+  padding: 1rem;
 }
 
 .landing-container {
@@ -14,9 +17,10 @@
   flex-grow: 1;
   text-align: center;
 
-  h1 {
+  .hero {
     color: white;
     font-size: 4rem;
+    margin: 2rem 0;
   }
 }
 
@@ -25,13 +29,27 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  height: 1142px;
+  width: 75vw;
+}
+
+.landing-info-row {
+
+  margin: 100px 0;
 }
 
 .landing-info-box {
   background-color: rgba(#D8ECEA, 0.25);
   display: flex;
   flex-direction: row;
+  justify-content: center;
   border-radius: 8px;
+
+
+  h3 {
+    font-size: 1rem;
+    margin: 1rem;
+  }
 }
 
 .info-box-1,
@@ -39,39 +57,38 @@
 .info-box-3 {
   padding: $edge-padding;
   border-radius: 8px;
+  max-width: 275px;
 }
 
-.info-box-1 {
-  background-color: $teal;
-}
-
-.info-box-collection,
-.info-box-trophy,
-.info-box-chat {
+.info-box-image {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   width: 200px;
 }
 
-.info-box-collection {
-  background-image: url('../../images/new-folder-dynamic-color.png');
+.info-box-1 {
+  background-color: $teal;
+
+  .info-box-image {
+    background-image: url('../../images/new-folder-dynamic-color.png');
+  }
 }
 
 .info-box-2 {
   background-color: $warning;
-}
 
-.info-box-chat {
-  background-image: url('../../images/chat-bubble-dynamic-color.png');
+  .info-box-image {
+    background-image: url('../../images/chat-bubble-dynamic-color.png');
+  }
 }
 
 .info-box-3 {
   background-color: $danger;
-}
 
-.info-box-trophy {
-  background-image: url('../../images/trophy-dynamic-color.png');
+  .info-box-image {
+    background-image: url('../../images/trophy-dynamic-color.png');
+  }
 }
 
 
