--- a/frontend/src/styles/components/landingheader.scss
+++ b/frontend/src/styles/components/landingheader.scss
@@ -1,6 +1,5 @@
 .landing-header {
-  height: 90px;
-  padding: 0 1rem;
+  height: 45px;
 
   .logo {
     width: 200px;
@@ -12,19 +11,19 @@
   display: none; // This removes the small arrow on the dropdown button
 }
 
-@media only screen and (max-width: $sm) {
+@media only screen and (max-width: $md) {
 
   .landing-header-links {
     display: none;
   }
 }
 
-@media only screen and (min-width: $sm) {
+@media only screen and (min-width: $md) {
   .landing-header {
-    height: 180px;
+    height: 140px;
   }
 
-  .dropdown-toggle,
+  .login-dropdown,
   .mobile-notfound-button {
     display: none;
   }
