--- a/frontend/src/styles/components/carousel.scss
+++ b/frontend/src/styles/components/carousel.scss
@@ -16,5 +16,11 @@
 @include media-breakpoint-up(md) {
   .carousel {
     height: 320px;
+
+    img {
+      height: 320px;
+      max-width: 100%;
+      margin: auto;
+    }
   }
 }
