--- a/frontend/src/styles/components/chatmessage.scss
+++ b/frontend/src/styles/components/chatmessage.scss
@@ -1,22 +1,16 @@
 .chat-message {
   background-color: $teal;
   border-radius: $games-border-radius;
+  display: flex;
+
 
   &:not(:last-of-type) {
     margin-top: $edge-padding;
   }
 
-  .row {
-    align-items: center;
-
-    .col-10 {
-      padding-left: 20px;
-    }
-  }
-
-
   img {
     width: 40px;
+    height: 40px;
     border-radius: $games-border-radius;
     margin: $inside-edge-padding;
   }
