--- a/frontend/src/styles/components/profile.scss
+++ b/frontend/src/styles/components/profile.scss
@@ -21,20 +21,27 @@
     ::after {
       display: none;
     }
+
+    .dropdown-toggle {
+      border-radius: 50%;
+    }
   }
 
-  .row:last-of-type {
-    margin: 0;
-    background-color: $danger;
+  .collection-button {
+    width: 100%;
     border-radius: 0 0 8px 8px;
+  }
 
-    .col {
-      padding: 0;
+  .profile-info {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+
+    h4 {
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
 
-    .btn {
-      width: 100%;
-      border-radius: 0 0 8px 8px;
-    }
+
   }
 }
