--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -65,4 +65,23 @@ body,
     border: 0;
     height: 100%;
   }
+
+  *::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */
+  }
+
+  *::-webkit-scrollbar-track {
+    background: $secondary;
+    /* color of the tracking area */
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: $warning;
+    /* color of the scroll thumb */
+    border-radius: 10px;
+    /* roundness of the scroll thumb */
+    border: 3px solid $secondary;
+    /* creates padding around scroll thumb */
+  }
 }
