Fixed sizing bugs when viewing empty user collections

--- a/frontend/src/styles/components/carousel.scss
+++ b/frontend/src/styles/components/carousel.scss
@@ -15,10 +15,10 @@
 
 @include media-breakpoint-up(md) {
   .carousel {
-    height: 320px;
+    height: 33vh;
 
     img {
-      height: 320px;
+      height: 33vh;
       max-width: 100%;
       margin: auto;
     }
