Replaced background in preparation for retheming

--- a/frontend/src/styles/components/landing.scss
+++ b/frontend/src/styles/components/landing.scss
@@ -1,5 +1,5 @@
 .landing {
-  background-image: url('../../images/ffflux.svg');
+  background-image: url('../../images/background-metro.png');
   background-attachment: fixed; // This is essential for the parallax effect
   background-repeat: no-repeat;
   background-position: center;
