--- a/frontend/src/styles/components/landingheader.scss
+++ b/frontend/src/styles/components/landingheader.scss
@@ -6,6 +6,10 @@
   }
 }
 
+.landing-header-links {
+  color: white;
+}
+
 .dropstart .dropdown-toggle::before,
 .desktop-notfound-button {
   display: none; // This removes the small arrow on the dropdown button
