--- a/frontend/src/styles/components/chatmessage.scss
+++ b/frontend/src/styles/components/chatmessage.scss
@@ -1,5 +1,6 @@
 .chat-message {
-  background-color: $teal;
+  background-color: $primary;
+  border: 1px solid $teal;
   border-radius: $games-border-radius;
   display: flex;
   align-items: center;
@@ -19,13 +20,17 @@
 
   h4 {
     font-size: 0.9rem;
+    color: white;
+    font-weight: 200;
   }
 
   h5 {
     font-size: 1rem;
+    font-weight: 400;
     text-overflow: ellipsis;
     // width: calc(100vw - 127px);
     overflow: hidden;
+    color: white
   }
 
   p,
