--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,11 +1,12 @@
 // custom variables
-$teal: #0F756B;
-$primary: $teal;
+$navy: #00263A;
+$primary: $navy;
+$navy-light: #1b4358;
+$secondary: $navy-light;
+$teal: #3CDBC0;
 $grey: #D8ECEA;
-$secondary: #4eaca2;
-$yellow: #E9B824;
-$orange: #EE9322;
-$red: #D83F31;
+$yellow: #F1BE48;
+$red: #E03C31;
 $spacer: 0.5rem;
 $border-radius: 0.2rem;
 $border-radius-lg: .2rem;
@@ -31,7 +32,6 @@ $games-border-radius: 8px;
 './components/gamesdisplay.scss',
 './components/notfound.scss',
 './components/carousel.scss',
-'./components/categorycards.scss',
 './components/gamecards.scss',
 './components/profile.scss',
 './components/feature.scss',
@@ -56,6 +56,10 @@ body,
   height: 100%;
 }
 
+a {
+  text-decoration: none !important;
+}
+
 @media only screen and (min-width: $md) {
 
   html,
@@ -73,7 +77,7 @@ body,
   }
 
   *::-webkit-scrollbar-track {
-    background: $secondary;
+    background: #0E1F2C;
     /* color of the tracking area */
   }
 
@@ -82,7 +86,7 @@ body,
     /* color of the scroll thumb */
     border-radius: 10px;
     /* roundness of the scroll thumb */
-    border: 3px solid $secondary;
+    border: 3px solid #0E1F2C;
     /* creates padding around scroll thumb */
   }
 }
