--- a/frontend/src/styles/components/gamesdisplay.scss
+++ b/frontend/src/styles/components/gamesdisplay.scss
@@ -1,12 +1,12 @@
 .display-background {
-  background-image: url('../../images/ffflux.svg');
+  background-image: url('../../images//background-metro.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   padding: 0.75rem;
 
   .display {
-    background-color: $teal;
+    background-color: $primary;
     border-radius: $games-border-radius;
     max-width: 1440px;
     padding: 0;
@@ -34,6 +34,17 @@
     height: calc(100vh - 147px);
     overflow-x: hidden;
     overflow-y: auto;
+
+
+    h2 {
+      color: white;
+      font-size: 1rem;
+      font-weight: 400;
+      text-align: center;
+      margin: $inside-edge-padding 0;
+      padding-bottom: $inside-edge-padding;
+      border-bottom: 2px solid $teal;
+    }
   }
 
   .display-top-games:not(:nth-child(-1)) {
@@ -64,13 +75,18 @@
   align-items: center;
   padding-left: $inside-edge-padding;
   flex: 1;
+  color: white;
+
+
 
   h3 {
     font-size: 0.9rem;
+    font-weight: 200;
   }
 
   h4 {
     font-size: 0.8rem;
+    font-weight: 400;
   }
 
   .top-games-rank {
@@ -90,19 +106,19 @@
 
   i {
     padding: $edge-padding;
-    color: $secondary;
+    color: $teal;
   }
 }
 
 .center-col {
-  background-color: $warning;
+  background-color: $secondary;
   border-radius: $games-border-radius;
   padding: $edge-padding $edge-padding 0 $edge-padding;
   min-height: 615px;
 }
 
 .center-col-collection {
-  background-color: $warning;
+  background-color: $secondary;
   border-radius: $games-border-radius;
   padding: $edge-padding $edge-padding 0 $edge-padding;
   min-height: 564px;
