--- a/frontend/src/styles/components/usercollection.scss
+++ b/frontend/src/styles/components/usercollection.scss
@@ -2,4 +2,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  h1 {
+    color: white;
+    font-weight: 200;
+    border-bottom: 2px solid $teal;
+  }
 }
