--- a/frontend/src/styles/components/profile.scss
+++ b/frontend/src/styles/components/profile.scss
@@ -34,8 +34,14 @@
 
   .profile-info {
     display: flex;
-    flex-direction: row;
-    align-items: flex-end;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-top: 10px;
+    padding-left: 10px;
+
+    h5 {
+      color: white;
+    }
 
     h4 {
       text-overflow: ellipsis;
