Styled single game modal

--- a/frontend/src/styles/components/gamecards.scss
+++ b/frontend/src/styles/components/gamecards.scss
@@ -18,6 +18,7 @@ ul.react-paginate {
   list-style-type: none;
   user-select: none;
   padding-left: 0px;
+  color: white;
 }
 
 ul.react-paginate li a {
@@ -25,6 +26,7 @@ ul.react-paginate li a {
   padding: 0.1rem 0.5rem;
   border: gray 1px solid;
   cursor: pointer;
+  color: white;
 }
 
 ul.react-paginate li.previous a,
